--- a/index.html
+++ b/index.html
@@ -3,17 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detecção Facial</title>
+    <title>Reconhecimento de Expressões Faciais</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Detecção Facial</h1>
+        <h1>Reconhecimento de Expressões Faciais</h1>
         <div class="video-container">
             <video id="video" width="640" height="480" autoplay muted></video>
             <canvas id="overlay" width="640" height="480"></canvas>
         </div>
-        <!-- Removidas as barras de expressão, pois estamos usando apenas detecção facial -->
+        <div class="expressions-container">
+            <div class="expression-container">
+                <span>Feliz:</span>
+                <div class="progress-bar">
+                    <div class="progress" id="happy"></div>
+                </div>
+            </div>
+            <div class="expression-container">
+                <span>Triste:</span>
+                <div class="progress-bar">
+                    <div class="progress" id="sad"></div>
+                </div>
+            </div>
+            <div class="expression-container">
+                <span>Bravo:</span>
+                <div class="progress-bar">
+                    <div class="progress" id="angry"></div>
+                </div>
+            </div>
+            <div class="expression-container">
+                <span>Surpreso:</span>
+                <div class="progress-bar">
+                    <div class="progress" id="surprised"></div>
+                </div>
+            </div>
+            <div class="expression-container">
+                <span>Neutro:</span>
+                <div class="progress-bar">
+                    <div class="progress" id="neutral"></div>
+                </div>
+            </div>
         <div class="status">Carregando modelos...</div>
         <button id="webcam-permission" class="permission-button">Permitir Acesso à Webcam</button>
     </div>
